@@ -21,16 +21,103 @@
 
 
 using System;
+using System.Collections;
+using System.Collections.Generic;
+
 
 namespace Banter
 {
-	
-	
+	///<summary>
+	///	ProviderUser Class
+	/// ProviderUser represents buddies from providers in telepathy.
+	///</summary>
 	public class ProviderUser
 	{
+		#region Private Types
+		private string uri;
+		private string alias;
+		private string protocol;
+		private Presence presence;
+		private string accountName;
+		private bool isMe;
+		#endregion		
+
+
+		#region Public Properties
+		/// <summary>
+		/// The Uri of the ProviderUser from telepathy
+		/// </summary>		
+		public string Uri
+		{
+			get { return uri; }
+			set { this.uri = value; }
+		}
+
+
+		/// <summary>
+		/// The Alias of the ProviderUser from telepathy
+		/// </summary>		
+		public string Alias
+		{
+			get { return alias; }
+			set { this.alias = value; }
+		}
+
+
+		/// <summary>
+		/// The Protocol of the ProviderUser from telepathy
+		/// </summary>		
+		public string Protocol
+		{
+			get { return protocol; }
+			set { this.protocol = value; }
+		}
+
+
+		/// <summary>
+		/// The Presence of the ProviderUser from telepathy
+		/// </summary>		
+		public Presence Presence
+		{
+			get { return presence; }
+		}		
+
+
+		/// <summary>
+		/// The Account Name of the ProviderUser from telepathy
+		/// </summary>		
+		public string AccountName
+		{
+			get { return accountName; }
+			set { this.accountName = value; }
+		}		
 		
+
+		/// <summary>
+		/// true if this represents the ProviderUser logged in
+		/// </summary>		
+		public bool IsMe
+		{
+			get { return isMe; }
+			set { this.isMe = value; }
+		}	
+		#endregion	
+		
+		
+		#region Constructors
+		/// <summary>
+		/// Constructs a ProviderUser
+		/// </summary>	
 		public ProviderUser()
 		{
+			this.presence = new Presence(PresenceType.Offline);
+			this.uri = String.Empty;
+			this.accountName = String.Empty;
+			this.alias = String.Empty;
+			this.isMe = false;
+			this.protocol = String.Empty;
 		}
+		#endregion
+		
 	}
 }
